--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 :root {
   --primary-color: rgb(104, 7, 7);
   --text-color: rgb(255, 255, 255);
+  --background: #000000; 
 }
-.customModal .modal-dialog .modal-content{
+
+.customModal .modal-dialog .modal-content {
   background-color: rgb(41, 41, 41);
   color: white;
 }
@@ -106,8 +108,6 @@ html {
 .customModal {
   top: 20vh;
 }
-
-
 
 @media (min-width: 1200px) {
   .player {
@@ -247,7 +247,7 @@ html {
     display: flex;
     align-items: center;
     margin-bottom: 12px;
-    background-color: rgb(0, 0, 0);
+    background-color: var(--background);
     padding: 8px 16px;
     border-bottom: 3px solid transparent;
     /* border-image: linear-gradient(
@@ -265,28 +265,37 @@ html {
   }
 
   .song:hover {
-    background-color: rgb(173, 169, 169);
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgba(25,0,255,1) 96%);
   }
 
   .song:hover .title,
-  .song:hover .author,
-  .song:hover .option {
-    color: rgb(0, 0, 0);
+  .song:hover .author{
+    color: rgb(255, 255, 255);
+  }
+
+  .song:hover .option{
+    color: rgb(41, 41, 41);
   }
 
   .song.active {
-    background-color: rgb(200.7, 200.7, 200.7);
-    border: 0;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgba(25,0,255,1) 96%);
   }
 
   .song:active {
-    opacity: 0.8;
+    opacity: 1;
+    border-bottom: white;
   }
 
   .song.active .option,
   .song.active .author,
   .song.active .title {
-    color: rgb(2, 0, 0);
+    color: rgb(255, 255, 255);
+  }
+
+  .song.active .option{
+    color: rgb(49, 48, 48);
   }
 
   .song .thumb {
@@ -328,21 +337,22 @@ html {
   }
 
   ::-webkit-scrollbar {
-    width: 20px;
+    width: 10px;
   }
 
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
+    /* background: linear-gradient(to top, #de6161, #2657eb); */
+    background : var(--background);
     border-radius: 10px;
   }
 
   ::-webkit-scrollbar-thumb {
-    background: rgb(141, 15, 15);
+    background: linear-gradient(to left, #200122, #6f0000);
     border-radius: 10px;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background: #570808;
+    background: linear-gradient(to top, #200122, #6f0000);
   }
 
   audio {
@@ -369,7 +379,7 @@ html {
     appearance: none;
     width: 30px;
     height: 30px;
-    background: var(--primary-color);
+    background: linear-gradient(to top, #780206, #061161);
     border-radius: 50%;
     border: rgb(177, 174, 174) solid 2px;
     cursor: pointer;
@@ -382,24 +392,24 @@ html {
     cursor: pointer;
   }
 
-  .thumbnail{
+  .thumbnail {
     display: flex;
     padding-top: 15px;
   }
-  
-  .thumbnail .thumbnail-img{
+
+  .thumbnail .thumbnail-img {
     width: 30%;
   }
-  
-  .thumbnail .thumbnail-content{
+
+  .thumbnail .thumbnail-content {
     /* display: flex; */
     /* flex-wrap: wrap; */
     /* align-items: center; */
     width: 70%;
     padding: 20px 20px 0 20px;
   }
-  
-  .thumbnail .thumbnail-content h5{
+
+  .thumbnail .thumbnail-content h5 {
     font-size: 18px;
   }
 }
@@ -540,7 +550,8 @@ html {
   }
 
   .song:hover {
-    background-color: rgb(49, 7, 7);
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgba(25,0,255,1) 96%);
   }
 
   .song:hover .title,
@@ -550,28 +561,21 @@ html {
   }
 
   .song.active {
-    background: #c31432; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-      to right,
-      #240b36,
-      #c31432
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-      to right,
-      #240b36,
-      #c31432
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    border: 0;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgba(25,0,255,1) 96%);
   }
 
   .song.active {
     opacity: 1;
   }
 
-  .song.active .option,
   .song.active .author,
   .song.active .title {
     color: rgb(247, 247, 247);
+  }
+
+  .song.active .option{
+    color: rgb(41, 41, 41);
   }
 
   .song .thumb {
@@ -599,7 +603,7 @@ html {
 
   .song .option {
     padding: 16px 8px;
-    color: var(--text-color);
+    color: rgb(177, 177, 177);
     font-size: 18px;
   }
 
@@ -725,4 +729,39 @@ html {
     height: 5px;
     background: bule;
   }
+}
+
+.custom-light-theme {
+  background: linear-gradient(to bottom, #23074d, #cc5333);
+  --text-color: rgb(0, 0, 0);
+  --background: #c9c9c9; 
+}
+/* 
+body{
+  background: linear-gradient(to bottom, #23074d, #cc5333);
+} */
+
+.custom-light-theme .dashboard{
+  background: white;
+  border: black solid 2px;
+}
+
+.custom-light-theme .playlist .song{
+  background: white;
+}
+
+.custom-light-theme .playlist .song .body h3, .custom-light-theme .playlist .song .body p {
+  color: #000000;
+}
+
+.custom-delete-btn{
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgba(25,0,255,1) 96%);
+  border: none;
+}
+
+.custom-close-btn{
+  background: rgb(131,58,180);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,28,1) 52%, rgba(25,0,255,1) 96%);
+  border: none;
 }
